; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/common/v4l2-tpg/extr_v4l2-tpg-core.c_tpg_get_textbg_color.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/common/v4l2-tpg/extr_v4l2-tpg-core.c_tpg_get_textbg_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tpg_data = type { i32 }

@TPG_COLOR_100_WHITE = common dso_local global i32 0, align 4
@TPG_COLOR_CSC_BLACK = common dso_local global i32 0, align 4
@TPG_COLOR_100_BLACK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tpg_data*)* @tpg_get_textbg_color to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tpg_get_textbg_color(%struct.tpg_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.tpg_data*, align 8
  store %struct.tpg_data* %0, %struct.tpg_data** %3, align 8
  %4 = load %struct.tpg_data*, %struct.tpg_data** %3, align 8
  %5 = getelementptr inbounds %struct.tpg_data, %struct.tpg_data* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %11 [
    i32 129, label %7
    i32 128, label %9
  ]

7:                                                ; preds = %1
  %8 = load i32, i32* @TPG_COLOR_100_WHITE, align 4
  store i32 %8, i32* %2, align 4
  br label %13

9:                                                ; preds = %1
  %10 = load i32, i32* @TPG_COLOR_CSC_BLACK, align 4
  store i32 %10, i32* %2, align 4
  br label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @TPG_COLOR_100_BLACK, align 4
  store i32 %12, i32* %2, align 4
  br label %13

13:                                               ; preds = %11, %9, %7
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
